some styling & adding a forecast for 1 day ahead

--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
     <div class="weather-app">
      <div class="container">
      <div class="form-floating ml-4 mt-3 mb-4 w-25">
-         <input type="search" class="form-control" id="floatingInput" placeholder="Forecast for...">
+         <input type="search" class="form-control bg-dark" id="floatingInput" placeholder="Forecast for...">
          <input type="submit" value="Predict" class = "btn btn-dark shadow-sm" id="search-form"/>
      </div>
      <div class="row">
+         <div class="col-2" id="date">
+             22/05/21
+
+         </div>
          <div class="col-2" id="city">
              Paris
+         </br>
+             <span id="temperature"> 
+                 2º C|F </span>
          </div>
 
-           <div class="col-2" id="temperature">
-               2º
-       </div>  
+
+
+          
 <div class="col-2"id="windSpeed">200km/h</div>
 
 <div class ="col-2"id="description">sunny with a chance of rain</div>
@@ -36,6 +43,24 @@
     11%
 </div>
 
+
+     </div>
+
+     <div class=row>
+         <div class="col-2">
+             <div class="weather-forecast">Sun
+
+             </div>
+             <img src= "https://specials-images.forbesimg.com/imageserve/933666298/960x0.jpg?fit=scale" alt= "" width="70"/>
+             <div class="weather-forecast-temperatures">
+             <span class="weather-forecast-min">
+                 10º
+             </span>
+             <span class="weather-forecast-max">
+                 13º
+             </span>
+             </div>
+         </div>
      </div>
 
 
