a lot of organising... little progress!

--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
          </form>
      </div>
      <div class="row">
-         <div class="col-2" id="date">
+         <div class="col-2" id="date"></div>
+         <div class="col-2" id="city"></div>
              
-
-         </div>
-         <div class="col-2" id="city">
-             
-         </br>
+<div class="col-2">
              <strong id="temperature"></strong>
                 <span class="units"><a href="#" id="celius-link" class="active">ºC</a>
                     |
@@ -54,8 +51,8 @@
 
      </div>
 
-     <div class=row>
-         <div class="col-2">
+     <div class="w-100">
+         <div class="col align-self-end">
              <div class="weather-forecast">Sun
 
              </div>
