added some fake forecast and put html inside JS

--- a/index.html
+++ b/index.html
@@ -48,26 +48,11 @@
     
 </div>
 
+<div class="weather-forecast" id ="forecast"></div>
 
      </div>
 
-     <div class="w-100">
-         <div class="col align-self-end">
-             <div class="weather-forecast">Sun
-
-             </div>
-             <img src= "https://specials-images.forbesimg.com/imageserve/933666298/960x0.jpg?fit=scale" alt= "" width="70"/>
-             <div class="weather-forecast-temperatures">
-             <span class="weather-forecast-min">
-                 10º
-             </span>
-             <span class="weather-forecast-max">
-                 13º
-             </span>
-             </div>
-         </div>
-     </div>
-
+   
 
 </div>
      </div>
